# my-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: Block.h  Matrix4.h  ModelMatrix.h  ProjectionMatrix.h  Shader.h  ShaderObjects.h  Shapes.h  Vector3.h  ViewMatrix.h
resources/shaders/: fragment.glsl  vertex.glsl
src/: Matrix4.c  ModelMatrix.c  ProjectionMatrix.c  Shader.c  Shapes.c  Vector3.c  ViewMatrix.c  main.c
